# booz_xform_jax

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
README_assets/: readme_compare_metrics.json
docs/: api.rst  citations.rst  conf.py  examples.rst  index.rst  inputs_outputs.rst  jax_geometry_jacobian_plan.rst  numerics.rst  quickstart.rst  stellopt_compatibility.rst  theory.rst
examples/: example_li383_autodiff_opt.py  example_li383_basic.py  example_li383_jacobian_sensitivity.py  example_li383_jax_api_fast.py  example_li383_resolution_scan.py  example_li383_wireframe.py  example_vmec_jax_pipeline.py
src/booz_xform_jax/: __init__.py  __main__.py  cli.py  core.py  io_utils.py  jax_api.py  plots.py  trig.py  vmec.py
tests/: conftest.py  test_cli.py  test_cli_smoke.py  test_jax_api.py  test_plots.py  test_read_wout_data.py  test_regression.py
tools/: profile_jax_api.py  readme_compare.py
