[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booz_xform_jax"
version = "0.1.0"
description = "Pure Python JAX implementation of the Boozer coordinate transformation"
readme = "README.md"
authors = [{ name = "UWPlasma contributors" }]
license = "MIT"
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "netCDF4",
  "scipy",
  "matplotlib",
  "plotly",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["boozer coordinates", "jax", "plasma physics", "stellarator", "vmec"]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme"]
dev = ["build", "pytest", "sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/uwplasma/booz_xform_jax"
Repository = "https://github.com/uwplasma/booz_xform_jax"
Documentation = "https://github.com/uwplasma/booz_xform_jax/tree/main/docs"
Issues = "https://github.com/uwplasma/booz_xform_jax/issues"

[project.scripts]
booz_xform_jax = "booz_xform_jax.cli:main"
xbooz_xform = "booz_xform_jax.cli:main"
xbooz_xform_jax = "booz_xform_jax.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = [".claude"]
